force-app/main/default/objects/Protocol_Item__c/Protocol_Item__c.object-meta.xml
<CustomObject>
    <label>Protocol Item</label>
    <nameField>
        <displayFormat>PI - {000000}</displayFormat>
        <label>Protocol Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Protocol Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>