force-app/main/default/objects/Protocol_Item__c/fields/Protocol_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Item_Type__c</fullName>
    <formula>TEXT(Protocol_Option__r.Protocol_Item_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Protocol Item Type</label>
    <type>Text</type>
</CustomField>