force-app/main/default/objects/Protocol_Item__c/fields/Protocol_Option__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Protocol Option</label>
    <referenceTo>Protocol_Option__c</referenceTo>
    <relationshipLabel>Protocol Items</relationshipLabel>
    <relationshipName>Protocol_Items</relationshipName>
    <type>Lookup</type>
</CustomField>