force-app/main/default/objects/Protocol_Item__c/fields/Protocol_Option_Detail__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Option_Detail__c</fullName>
    <formula>TEXT(Protocol_Option__r.Protocol_Option__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Protocol Option Detail</label>
    <type>Text</type>
</CustomField>