force-app/main/default/objects/Protocol_Item__c/fields/Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_ID__c</fullName>
    <formula>Protocol_Option__r.Record_Type_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type ID</label>
    <type>Text</type>
</CustomField>